--- a/UI.vcxproj
+++ b/UI.vcxproj
@@ -250,7 +250,7 @@
       <LanguageStandard>stdcpp14</LanguageStandard>
     </ClCompile>
     <Link>
-      <SubSystem>Windows</SubSystem>
+      <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -288,6 +288,7 @@
     <ClCompile Include="UI.c" />
     <ClCompile Include="UIButton.c" />
     <ClCompile Include="UICheckbox.c" />
+    <ClCompile Include="UIDialog.c" />
     <ClCompile Include="UIElement.c" />
     <ClCompile Include="UILabel.c" />
     <ClCompile Include="UIWindow.c" />
@@ -299,6 +300,7 @@
     <ClInclude Include="include\UI\UIChart.h" />
     <ClInclude Include="include\UI\UICheckbox.h" />
     <ClInclude Include="include\UI\UIContainer.h" />
+    <ClInclude Include="include\UI\UIDialog.h" />
     <ClInclude Include="include\UI\UIDropdown.h" />
     <ClInclude Include="include\UI\UIElement.h" />
     <ClInclude Include="include\UI\UIImage.h" />
