--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ set(CMAKE_PREFIX_PATH ${CMAKE_SOURCE_DIR}/extern/)
 
 IF(WIN32)
 
-ELSEIF(UNIX AND NOT APPLE)
+ELSEIF(LINUX)
     set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
 ELSEIF(APPLE)
 
