--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "extern/crypto"]
 	path = extern/crypto
 	url = https://github.com/Jacob-C-Smith/crypto
+[submodule "extern/table"]
+	path = extern/table
+	url = https://github.com/Jacob-C-Smith/table
